# quotes

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  Test  ValaConfig.cmake  index.html  index.md  meson.build  test  test_case  testcase
app/share/glib-2.0/schemas/: com.github.alonsoenrique.quotes.gschema.xml  gschemas.compiled
app/share/icons/hicolor/: icon-theme.cache
data/: Application.css  Window.css  application.css  com.github.AlonsoEnrique.Quotes.dekstop  com.github.alonsoenrique.quotes.appdata.xml  com.github.alonsoenrique.quotes.appdata.xml.in  com.github.alonsoenrique.quotes.dekstop  com.github.alonsoenrique.quotes.desktop  com.github.alonsoenrique.quotes.gresource.xml  com.github.alonsoenrique.quotes.gschema.xml  com.github.ma1onso.quotes.appdata.xml  com.github.ma1onso.quotes.appdata.xml.in  com.github.ma1onso.quotes.desktop.in  com.github.ma1onso.quotes.gresource.xml  com.github.ma1onso.quotes.gschema.xml  css.gresource.xml  icons.gresource.xml  meson.build  style.gresource.xml
data/css/: css.gresource.xml
data/icons/: icons.gresource.xml  online-account-twitter-presenter.sozi.html  online-account-twitter.sozi.html  online-account-twitter.sozi.json
data/images/icons/: icons.gresource.xml
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.alonsoenrique.quotes.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+156 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+157 more)
src/: Application.vala  CMakeLists.txt  Main.vala  MainWindow.vala  QuoteClient.vala  meson.build
src/Configs/: Constants.vala  Properties.vala
src/Utils/: QuoteClient.vala
src/Widgets/: HeaderBar.vala  QuoteStack.vala  Toolbar.vala
src/configs/: Constants.vala  Constants.vala.cmake  Properties.vala
src/ui/: MainWindow.vala
src/utils/: QuoteClient.vala
src/widgets/: QuoteStack.vala  Toolbar.vala
tests/: CMakeLists.txt  ConstantsTest.vala  PropertiesTest.vala  QuoteClientTest.vala  QuoteStackTest.vala  TestCase.vala  TestMain.vala  test-case.vala  test-main.vala
